[project]
name = "infonomy_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi-users-db-sqlmodel>=0.3.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.116.0",
    "instructor>=1.10.0",
    "ipykernel>=6.30.1",
    "litellm>=1.74.12",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
]
